agregando version a lombok...

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+                        <version>1.16.22</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -64,6 +65,7 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+                                                        <version>1.16.22</version>
 						</exclude>
 					</excludes>
 				</configuration>
