--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 	</dependencies>
 
 	<build>
+            <defaultGoal>install</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
