--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -69,7 +65,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+                        <plugin>
+                            <groupId>com.heroku.sdk</groupId>
+                            <artifactId>heroku-maven-plugin</artifactId>
+                            <version>3.0.3</version>
+                          </plugin>
 		</plugins>
+              
 	</build>
 
 </project>
